--- a/src/Components/Works/Works.css
+++ b/src/Components/Works/Works.css
@@ -12,6 +12,7 @@
 }
 
 .worksTitle {
+  margin-bottom: 1rem;
   margin: 1rem 0;
   font-size: 3rem;
 }
@@ -19,21 +20,101 @@
   font-weight: 300;
   font-size: 1rem;
   max-width: 45rem;
+  margin-bottom: 2rem;
 }
 
 .worksImgs {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  margin: 3rem 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, auto);
+  gap: 1rem;
   width: 100vw;
   max-width: 65rem;
 }
 
 .worksImg {
+  height: auto;
+  border-radius: 8px;
   object-fit: cover;
-  height: 20rem;
-  margin: 0.5rem;
+  margin: 1rem;
+  width: 90%;
+  height: 300px;
+  margin-bottom: 2rem;
+}
+
+.worksItem {
+  position: relative;
+}
+
+.worksButton {
+  background-color: #b1fb79;
+  color: #000;
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+.worksButton:hover {
+  background-color: black;
+  color: #b1fb79;
+}
+
+.worksLink {
+  margin-right: 10px;
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+.projectLinks {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between; /* Distribute buttons evenly */
+}
+
+.worksLink:hover {
+  color: #b1fb79;
+  border-bottom: solid 2px #b1fb79;
+}
+
+.worksCard {
+  background: rgb(40, 40, 40);
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease-in-out;
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.worksCard:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.projectInfo {
+  text-align: center;
+}
+
+h3 {
+  margin-bottom: 10px;
+  font-size: 24px;
+  color: #b1fb79;
+}
+.projectInfo strong {
+  color: #b1fb79;
+}
+.projectInfo ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.projectInfo li {
+  margin-bottom: 5px;
 }
 
 @media screen and (max-width: 585px) {
