--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -16,6 +16,7 @@
   object-fit: cover;
   height: 10rem;
   width: 12rem;
+  cursor: pointer;
 }
 
 .menuListItem {
@@ -37,6 +38,7 @@
   justify-content: center;
   padding: 0 1rem;
   border-radius: 2rem;
+  cursor: pointer;
 }
 .menuImage {
   object-fit: cover;
